@@ -9,6 +9,10 @@ For more detailed instructions on filling in the ChangeLog form, see
 ******************************************************************************
 post-6.2 release changes: 
 
+2002-09-27    <layer@HOBART>
+
+	* Makefile: updated cygwin no longer has `pwd' in env, so make it
+
 2002-09-25  Kevin Layer  <layer@crikey>
 
 	* fi-lep.el: bug12531: fix another fontification problem
